--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/motion_container">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_main"
@@ -16,5 +17,17 @@
         app:layout_constraintTop_toBottomOf="parent"
         tools:listitem="@layout/list_item_video"
         tools:itemCount="10"/>
+
+    <FrameLayout
+        android:id="@+id/progress_recycler"
+        android:background="#FFF"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
