Alterando o comportamento e animando a view de player para o video

--- a/app/src/main/res/xml/scene.xml
+++ b/app/src/main/res/xml/scene.xml
@@ -7,9 +7,13 @@
         app:constraintSetStart="@id/start"
         app:duration="300">
 
-        <OnClick
+        <OnSwipe
+            app:dragDirection="dragUp"
+            app:touchAnchorId="@id/video_player"
+            app:touchRegionId="@id/video_player" />
+        <!-- <OnClick
             app:clickAction="toggle"
-            app:targetId="@id/video_player" />
+            app:targetId="@id/video_player" /> -->
 
     </Transition>
 
