--- a/app/src/main/res/layout/video_detail.xml
+++ b/app/src/main/res/layout/video_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,12 +10,46 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/black"
-        android:visibility="visible"/>
+        android:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/video_player"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@android:color/holo_red_dark"/>
+        android:src="@android:color/holo_red_dark" />
+
+    <LinearLayout
+        android:id="@+id/video_player_title"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/white"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/mini_player_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            android:text="Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo "
+            android:textColor="@android:color/black" />
+
+        <TextView
+            android:id="@+id/mini_player_subtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            android:text="Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo Olá mundo " />
+
+    </LinearLayout>
+
+    <SurfaceView
+        android:id="@+id/surface_player"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
 
 </merge>
