--- a/app/src/main/res/xml/scene.xml
+++ b/app/src/main/res/xml/scene.xml
@@ -11,9 +11,9 @@
             app:dragDirection="dragUp"
             app:touchAnchorId="@id/video_player"
             app:touchRegionId="@id/video_player" />
-        <!-- <OnClick
-            app:clickAction="toggle"
-            app:targetId="@id/video_player" /> -->
+        <!--        <OnClick app:clickAction="toggle"-->
+        <!--            app:targetId="@id/video_player" />-->
+
 
         <KeyFrameSet>
             <KeyAttribute
@@ -33,10 +33,62 @@
                 android:scaleY="1"
                 app:framePosition="92"
                 app:motionTarget="@id/video_player_title" />
+            <KeyAttribute
+                android:alpha="0"
+                app:framePosition="95"
+                app:motionTarget="@id/video_cancel_button" />
+            <KeyAttribute
+                android:alpha="0"
+                app:framePosition="95"
+                app:motionTarget="@id/video_play_button" />
         </KeyFrameSet>
+
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
+
+        <Constraint
+            android:id="@+id/hide_player"
+
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+
+            app:layout_constraintStart_toStartOf="@id/video_player"
+            app:layout_constraintTop_toTopOf="@id/video_player" />
+
+        <Constraint
+            android:id="@+id/container_scroll"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/video_player" />
+
+        <Constraint
+            android:id="@+id/video_play_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+
+            android:layout_marginEnd="10dp"
+
+            app:layout_constraintBottom_toBottomOf="@id/video_player_title"
+            app:layout_constraintEnd_toStartOf="@id/video_cancel_button"
+            app:layout_constraintTop_toTopOf="@id/video_player_title" />
+
+        <Constraint
+            android:id="@+id/video_cancel_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+
+            android:layout_marginEnd="10dp"
+
+            app:layout_constraintBottom_toBottomOf="@id/video_player_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/video_player_title" />
+
         <Constraint
             android:id="@+id/video_player"
             app:layout_constraintDimensionRatio="16:9"
@@ -53,14 +105,90 @@
 
         <Constraint
             android:id="@+id/video_player_title"
-            app:layout_constraintBottom_toBottomOf="@id/video_player"
+            app:layout_constraintTop_toTopOf="@id/video_player"
             app:layout_constraintEnd_toEndOf="@id/video_player"
             app:layout_constraintStart_toStartOf="@id/video_player"
-            app:layout_constraintTop_toTopOf="@id/video_player" />
+            app:layout_constraintBottom_toBottomOf="@id/video_player" />
 
     </ConstraintSet>
 
+
     <ConstraintSet android:id="@+id/end">
+
+        <Constraint
+            android:id="@+id/seek_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toTopOf="@id/container_scroll"
+            app:layout_constraintTop_toTopOf="@id/container_scroll"
+            />
+
+        <Constraint
+            android:id="@+id/hide_player"
+
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+
+            android:layout_marginStart="150dp"
+            android:layout_marginEnd="20dp"
+
+            app:layout_constraintBottom_toBottomOf="@id/video_player"
+            app:layout_constraintTop_toTopOf="@id/video_player"
+            app:layout_constraintEnd_toStartOf="@id/video_play_button"
+            app:layout_constraintStart_toStartOf="@id/video_player"
+
+            />
+
+        <Constraint
+            android:id="@+id/container_scroll"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="18dp"
+            android:translationY="-42dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/video_player" />
+
+        <Constraint
+            android:id="@+id/video_player_title"
+            app:layout_constraintTop_toTopOf="@id/video_player"
+            app:layout_constraintEnd_toEndOf="@id/video_player"
+            app:layout_constraintStart_toStartOf="@id/video_player"
+            app:layout_constraintBottom_toBottomOf="@id/video_player"
+            android:layout_marginStart="130dp"
+            android:layout_marginEnd="10dp"
+
+            />
+
+        <Constraint
+            android:id="@+id/video_play_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+
+            android:layout_marginEnd="10dp"
+
+            app:layout_constraintBottom_toBottomOf="@id/video_player_title"
+            app:layout_constraintEnd_toStartOf="@id/video_cancel_button"
+            app:layout_constraintTop_toTopOf="@id/video_player_title" />
+
+        <Constraint
+            android:id="@+id/video_cancel_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+
+            android:layout_marginEnd="25dp"
+
+            app:layout_constraintBottom_toBottomOf="@id/video_player_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/video_player_title" />
+
         <Constraint
             android:id="@+id/video_player"
             android:layout_marginStart="10dp"
@@ -69,6 +197,7 @@
             android:scaleX=".4"
             android:translationX="-120dp"
             app:layout_constraintBottom_toBottomOf="parent"
+
             app:layout_constraintDimensionRatio="17:3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -84,12 +213,14 @@
 
         <Constraint
             android:id="@+id/video_player_title"
-            android:layout_marginStart="120dp"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintBottom_toBottomOf="@id/video_player"
+            app:layout_constraintTop_toTopOf="@id/video_player"
             app:layout_constraintEnd_toEndOf="@id/video_player"
             app:layout_constraintStart_toStartOf="@id/video_player"
-            app:layout_constraintTop_toTopOf="@id/video_player" />
+            app:layout_constraintBottom_toBottomOf="@id/video_player"
+            android:layout_marginStart="120dp"
+            android:layout_marginEnd="10dp"
+            />
+
 
     </ConstraintSet>
 </MotionScene>
